# turbin3-capstone

./: .gitignore  .prettierignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  pyproject.toml  v0.prompt
.cargo/: config.toml
drand-vrf-service/: Cargo.toml
drand-vrf-service/src/: main.rs
programs/snowlotus/: Cargo.toml
programs/snowlotus/src/: error.rs  lib.rs
programs/snowlotus/src/instructions/: buy_booster.rs  claim.rs  finalize.rs  initialize.rs  mint_booster.rs  mod.rs  play_card.rs  request_booster.rs
programs/snowlotus/src/state/: booster_pack.rs  game.rs  mod.rs  player.rs  user_receipt.rs  vrf_config.rs
programs/snowlotus/src/vrgda/: mod.rs  sqrt_vrgda.rs
research/: notebook.ipynb  slot_data.json
tests/: cards.ts  open_booster.ts  prize_claim.ts  snowlotus.ts  test_utils.ts
